# BetsService

./: .gitignore  pyproject.toml
src/: config.py  logger.py  main.py
src/arbs/: oddscorp_arbs.py  router.py  service.py
src/bet/: oddscorp_arbs.py  oddscorp_bet.py  oddscorp_values.py  router.py  service.py  utils.py
src/bots/: router.py
src/market/: oddscorp_websocket.py  router.py  schemas.py  service.py
src/parser/: oddscorp_arbs.py  oddscorp_websocket.py  schemas.py  service.py
src/values/: oddscorp_values.py  router.py  schemas.py  service.py
